--- a/src/checklist.html
+++ b/src/checklist.html
@@ -58,64 +58,51 @@
                     <p>8 Weeks Before</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="insurance">
-                        <label for="insurance">Consider Purchasing Insurance</label>
-                    </div>
-                    <p>Insure items before putting them in storage. Even if belongings are covered under an existing
+                    <input type="checkbox" id="insurance">
+                    <label for="insurance">Consider Purchasing Insurance</label>
+                    <p class="checklist__text">Insure items before putting them in storage. Even if belongings are
+                        covered under an existing
                         homeowners or renters insurance policy, you should call your provider to double-check that items
                         will still be covered when they are “off-premise.” If items aren't covered under your current
                         policy, consider purchasing additional coverage. Be aware that many storage facilities provide
                         affordable self-storage insurance options. This added protection may be free of charge as well.
                     </p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="budget">
-                        <label for="budget">Budget Accordingly</label>
-                    </div>
+                    <input type="checkbox" id="budget">
+                    <label for="budget">Budget Accordingly</label>
                     <p>When figuring out your overall moving budget, be sure to factor in your storage expenses. The
                         cost of renting a storage unit is typically based on how much and how long you store.
                         Self-storage facilities usually offer contracts on a month-to-month basis. Contracts offered by
                         full-service storage facilities vary from company to company. Some insist on a three month
                         minimum, while others offer month-to-month services.</p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="choose">
-                        <label for="choose">Choose Full-Service Storage or Self-Storage</label>
-                    </div>
+                    <input type="checkbox" id="choose">
+                    <label for="choose">Choose Full-Service Storage or Self-Storage</label>
                     <p>If you live in a high-rise building or an urban area where parking is an issue, consider hiring a
                         full-service storage company. Using this type of storage means that storage facility
                         representatives will deliver your storage unit to you and retrieve items when you need them.
                         While convenient, this type of storage service tends to be more expensive than self-storage.
                         Most customers opt for self-storage facilities because of their affordability and flexible
                         rental terms.</p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="research">
-                        <label for="research">Research Storage Locations</label>
-                    </div>
+                    <input type="checkbox" id="research">
+                    <label for="research">Research Storage Locations</label>
                     <p>From Public Storage to U-Haul Storage, there are numerous self-storage facilities available to
                         you. Before booking a unit, make sure that the storage facility of choice is located near your
                         home. This way, you won't have any trouble visiting the storage unit when you need to drop-off
                         or pick-up an item.</p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="compare">
-                        <label for="compare">Compare Prices</label>
-                    </div>
+                    <input type="checkbox" id="compare">
+                    <label for="compare">Compare Prices</label>
                     <p>To compare storage facility prices, use Moving.com's 'Find Storage Now' tool. We'll pull quotes
                         from the closest storage unit facilities near your new home to compare. You can even sort them
                         by star ratings from other people, their price and distance from your home. When using
                         Moving.com's storage tool, you can also filter by features such as climate control, drive-up
                         access and 24-hour access.</p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="space">
-                        <label for="space">Figure Out How Much Space You Need</label>
-                    </div>
+                    <input type="checkbox" id="space">
+                    <label for="space">Figure Out How Much Space You Need</label>
                     <p>Storage units come in a number of sizes. In fact, the majority of self-storage facilities offer
                         multiple size units for rent. The most common sizes include 5'x5', 5'x10', 10'x10', 10'x15' and
                         10'x20' storage units. In addition, many facilities offer smaller and larger sizes for
                         customers.</p>
-                    <div class="checklist__item__header">
-                        <input type="checkbox" id="needs">
-                        <label for="needs">Make Checklist of Storage Needs</label>
-                    </div>
+                    <input type="checkbox" id="needs">
+                    <label for="needs">Make Checklist of Storage Needs</label>
                     <p>Do you need a climate controlled unit? How about 24-hour access? Before booking a storage unit,
                         determine your wants and needs when it comes to storage unit amenities. A few amenities and
                         features to consider include accessibility, video monitoring, number of locks, hours of
@@ -128,7 +115,8 @@
                     <p>6 Weeks Before</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <p>Book Storage Unit</p>
+                    <input type="checkbox" id="book">
+                    <label for="book">Book Storage Unit</label>
                     <p>Six to seven weeks prior to needing storage, go ahead and book your storage unit of choice. You
                         can book your storage unit through Moving.com's free Storage Center. All you have to do is type
                         in your zip code and click the “find storage” button. Moving.com will pull quotes from the
@@ -142,14 +130,16 @@
                     <p>4 Weeks Before</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <p>Look Up Storage Unit Restrictions</p>
+                    <input type="checkbox" id="restrictions">
+                    <label for="restrictions">Look Up Storage Unit Restrictions</label>
                     <p>Before placing your things in storage, be sure to look up all storage facility rules and
                         restrictions. Your storage facility should be able to provide you with a list of what you can
                         and cannot put in storage. Items that are generally not allowed in storage include gasoline,
                         fertilizers, paint, chemicals, fireworks, explosives, narcotics, perishable food, medicine,
                         plants and any flammable objects.
                     </p>
-                    <p>Create Inventory List of All Items</p>
+                    <input type="checkbox" id="inventory">
+                    <label for="inventory">Create Inventory List of All Items</label>
                     <p>As you begin to sift through your things, start writing down all items that you intend to store.
                         Creating an inventory list will help keep your belongings organized during a move. This list can
                         also be used for insurance purposes, if something (god forbid) is damaged or stolen while in
@@ -164,7 +154,8 @@
                     <p>2 Weeks Before</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <p>Safeguard Items</p>
+                    <input type="checkbox" id="safeguard">
+                    <label for="safeguard">Safeguard Items</label>
                     <p>Renting a storage unit without climate control? You'll need to prevent general wear and tear by
                         safeguarding items from outside forces (think: dust, moisture, mildew, pests and mold). To
                         protect items: apply protective spray on furniture and leather goods; seal boxes tightly to keep
@@ -172,11 +163,13 @@
                         wardrobe boxes; place mattresses inside special mattress storage bags; and cover furniture in
                         cotton sheets.
                     </p>
-                    <p>Label Boxes</p>
+                    <input type="checkbox" id="label-boxes">
+                    <label for="label-boxes">Label Boxes</label>
                     <p>After you decide what's going in storage, begin packing items in clearly labeled boxes. This will
                         make it easier to find belongings when you need them.
                     </p>
-                    <p>Take Photos of All Items</p>
+                    <input type="checkbox" id="take-photos">
+                    <label for="take-photos">Take Photos of All Items</label>
                     <p>As you pack up items, take photos of all valuables and important items to match your inventory
                         list. This way you can simply scroll through photos to remember what's inside your storage unit.
                         In addition, these photos can be useful for insurance purposes.</p>
@@ -188,7 +181,8 @@
                     <p>The Day Before</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <p>Disassemble Large Items</p>
+                    <input type="checkbox" id="disassemble">
+                    <label for="disassemble">Disassemble Large Items</label>
                     <p>When placing belongings inside of a storage unit, be sure to take them apart first. Large items
                         such as beds and tables should be properly disassembled. This will help conserve space in your
                         storage unit. It will also help protect items from damage. Read more tips on preparing items for
@@ -202,7 +196,8 @@
                     <p>Storage Day</p>
                 </div>
                 <div class="checklist__grid__right">
-                    <p>Strategically Place Items Inside Storage Unit</p>
+                    <input type="checkbox" id="place-items">
+                    <label for="place-items">Strategically Place Items Inside Storage Unit</label>
                     <p>When putting items in storage, be strategic about how and where you decide to place them inside
                         the unit. Box springs and mattresses should be stored flat to prevent damage. Large and heavy
                         items should line the bottom of the storage unit. Lighter items should go on top. To save space,
@@ -215,12 +210,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
     <footer class="footer">
         <div class="footer__top">
